crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@variable_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: error_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/variable_fail.tapir
---
Error: Unknown variable 'z'
   ╭─[/home/gwilym/Projects/tapir-game-tools/crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/variable_fail.tapir:1:1]
   │
 2 │ var y = z + 3; # z is not defined
   │         ┬  
   │         ╰── Unknown variable
───╯
